#3-corrige alternância de tema claro/escuro no WebView